# audio-deidentification

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  app.py  dockerfile  pyproject.toml
ASR/: __init__.py  run_aws_transcribe.py  upload_audio.py
NER/: __init__.py  app.py  bert.py  test_ner.sh  train_ner.py
REDACT/: __init__.py  audio_redact.py
docs/: Makefile
docs/source/: api.rst  conf.py  index.rst  installation.rst  quickstart.rst
docs/source/tutorial/: debugging.rst  index.rst
openapi/: spec.yaml
