[tool.poetry]
name = "audio-deidentification"
version = "0.1.0"
description = "The deindentification portion of the pipeline for our analysis of why individuals adhere or do not adhere to medication guidelines"
authors = ["Magd Bayoumi <mb2363@cornell.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.1"
matplotlib = "^3.1.3"
torch = "^1.4.0"
transformers = "^2.5.1"
boto3 = "^1.12.6"
seqeval = "^0.0.12"
tqdm = "^4.43.0"
nltk = "^3.4.5"
flask = "^1.1.1"
flask-cors = "^3.0.8"
pydub = "^0.23.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-cov = "^2.8"
pytest-mock = "^1.12"
xdoctest = "^0.10.3"
coverage = "^4.5"
flake8 = "^3.7"
flake8-docstrings = "^1.5"
flake8-rst-docstrings = "^0.0.12"
darglint = "^1.1"
isort = {version = "^4.3", extras = ["pyproject"]}
seed-isort-config = "^1.9"
pre-commit = "^1.20"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
sphinx = "^2.2"
sphinx-rtd-theme = "^0.4.3"
sphinx_pdj_theme = "^0.1.5"
pallets_sphinx_themes = "^1.2.3"
sphinxcontrib-openapi = "^0.6.0"
keyring = "^21.0.0"
artifacts-keyring = "^0.2.8-rc.0"
connexion = {extras = ["swagger-ui"], version = "^2.5.1"}
tox = "^3.14.3"

[tool.poetry.extras]
doc = ["sphinx", "sphinx_rtd_theme"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py36,py37,py38
[testenv]
whitelist_externals = poetry
commands =
    poetry install -vvv
    poetry run python -m pytest
"""

[tool.isort]
known_first_party = 'audio-deidentification'
known_third_party = ["bert", "boto3", "botocore", "config", "flask", "flask_cors", "nltk", "numpy", "pallets_sphinx_themes", "pydub", "seqeval", "torch", "tqdm", "transformers"]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
